tests/__snapshots__/api-toBeNull-stderr.snap.txt
Error: The source type is 'void'.

   7 |   expect(returnsNull()).type.toBeNull();
   8 | 
>  9 |   expect(returnsVoid()).type.toBeNull();
     |                              ^
  10 | });
  11 | 
  12 | test("is NOT null?", () => {

       at ./__typetests__/toBeNull.tst.ts:9:30 ❭ is null?

Error: The source type is 'null'.

  13 |   expect(returnsVoid()).type.not.toBeNull();
  14 | 
> 15 |   expect(returnsNull()).type.not.toBeNull();
     |                                  ^
  16 | });
  17 | 

       at ./__typetests__/toBeNull.tst.ts:15:34 ❭ is NOT null?

